data/derived/comb/progs/unify/prog6980.ml.out
Characters 124-125:
  in wwhile (gs, b);;
                 ^
Error: This expression has type bool but an expression was expected of type
         int
